derive/tests/snapshots/foreign_key_to_table_without_delete_methods/Price/get_all_prices.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `price` table.
    pub fn get_all_prices<'a>(&'a self) -> impl Iterator<Item = Price> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().price().iter()
    }
}
