derive/tests/snapshots/foreign_key_to_table_without_delete_methods/Price/table.snap
---
source: derive/src/characterization_tests.rs
---
// Documentation appended to the struct:
///
/// # Foreign keys of the `price` table
///
/// - `currency_id` references the `id` column of the `currency` table (`self`).
///   - On delete: none, the `currency` table is not deletable
///   - On soft delete: none, the `currency` table is not soft-deletable

pub trait this_compilation_error_occurs_because_the_price_table_has_no_foreign_key_attribute_referencing_the_currency_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_your_foreign_key_referencing_the_currency_table_needs_to_define_a_strategy_for_on_delete_or_the_currency_table_has_no_referenced_by_attribute_referencing_the_price_table;
    use self::this_compilation_error_occurs_because_your_foreign_key_referencing_the_currency_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_currency_table_has_no_referenced_by_attribute_referencing_the_price_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct PriceId {
    value: u64,
}
impl Default for PriceId {
    fn default() -> PriceId {
        PriceId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for PriceId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "PriceId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for PriceId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Price> for PriceId {
    fn from(value: &Price) -> Self {
        PriceId { value: value.id.clone() }
    }
}
impl From<&Price> for Option<PriceId> {
    fn from(value: &Price) -> Option<PriceId> {
        Some(PriceId { value: value.id.clone() })
    }
}
impl From<&PriceId> for Option<PriceId> {
    fn from(value: &PriceId) -> Option<PriceId> {
        use crate::spacetimedsl::Wrapper;
        Some(PriceId::new(value.value()))
    }
}
impl From<&PriceId> for PriceId {
    fn from(value: &PriceId) -> Self {
        use crate::spacetimedsl::Wrapper;
        PriceId::new(value.value())
    }
}
impl Price {
    ///
    pub fn get_id(&self) -> PriceId {
        use crate::spacetimedsl::Wrapper;
        PriceId::new(self.id.clone())
    }
    /**References the `id` column of the `currency` table (`self`).

- On delete: none, the `currency` table is not deletable
- On soft delete: none, the `currency` table is not soft-deletable*/
    pub fn get_currency_id(&self) -> CurrencyId {
        use crate::spacetimedsl::Wrapper;
        CurrencyId::new(self.currency_id.clone())
    }
    /**References the `id` column of the `currency` table (`self`).

- On delete: none, the `currency` table is not deletable
- On soft delete: none, the `currency` table is not soft-deletable*/
    pub fn set_currency_id(&mut self, currency_id: impl Into<CurrencyId>) -> CurrencyId {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(
            &mut self.currency_id,
            currency_id.into().value(),
        );
        CurrencyId::new(old_value)
    }
}
///
pub struct CreatePrice {
    pub currency_id: CurrencyId,
}

// Generated DSL methods:
// count_of_all_prices
// create_price
// delete_price_by_id
// delete_prices_by_currency_id
// get_all_prices
// get_price_by_id
// get_prices_by_currency_id
// update_price_by_id
