derive/tests/snapshots/foreign_key_to_table_without_delete_methods/Price/update_price_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Price` row of the `price` table whose value matches the value from the unique single-column btree index on the `id` column.

# Foreign keys

Fails with `ReferenceIntegrityViolation` unless each of these columns references a row whenever its value changes:

- `currency_id`: a row of the `currency` table (`self`), or `0`*/
    pub fn update_price_by_id<'a>(
        &'a self,
        price: Price,
    ) -> Result<Price, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut price = price;
        let mut the_same_or_another_price: Option<Price> = None;
        let currency_id = price.get_currency_id().value();
        if currency_id.ne(&0) {
            if the_same_or_another_price.is_none() {
                the_same_or_another_price = match self
                    .db()
                    .price()
                    .id()
                    .find(price.get_id().value())
                {
                    Some(price) => Some(price),
                    None => {
                        return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                            table_name: "price".into(),
                            column_names_and_row_values: format!(
                                "{{ id : {} }}", price.get_id().value()
                            )
                                .into(),
                        });
                    }
                };
            }
            if the_same_or_another_price
                .as_ref()
                .expect(
                    "the stored row is looked up by its primary key before the row to write is compared with it",
                )
                .get_currency_id()
                .ne(&price.get_currency_id())
            {
                match self.get_currency_by_id(price.get_currency_id()) {
                    Ok(_) => {}
                    Err(_) => {
                        return Err(
                            crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnCreateOrUpdate {
                                table_name: "price".into(),
                                create_or_update: crate::spacetimedsl::error::CreateOrUpdate::Update,
                                column_names_and_row_values: format!(
                                    "{{ currency_id : {} }}", currency_id
                                )
                                    .into(),
                            }),
                        );
                    }
                };
            }
        }
        let price = self.db().price().id().update(price);
        Ok(price)
    }
}
